<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Flecha de regreso -->
    <ImageView
        android:id="@+id/retroceso"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:src="@drawable/flecha"
        android:contentDescription="@string/desc_flecha_retroceso"
        android:layout_marginBottom="8dp" />

    <!-- Título -->
    <TextView
        android:id="@+id/textFacturacionYCobro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_facturacion_cobro"
        android:textSize="18sp"
        android:textColor="#000"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"/>

    <!-- Línea separadora -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B0B0B0"
        android:layout_marginBottom="16dp" />

    <!-- Tarjeta de información -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/oval_background"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp">

        <!-- Cada fila: Título + Dato -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_nombre_conjunto"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ovalNombreConjuntoProto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombre_conjunto_portal"
                android:textColor="#FFF"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Placa -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_placa_conjunto"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ovalNumeroPlaca"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/placa_numero"
                android:textColor="#FFF"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Puesto -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_puesto"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ovalPuestoProto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/puesto_valor"
                android:textColor="#FFF"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Nombre del residente -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_nombre_residente"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ovalNombreResidenteProto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombre_residente_valor"
                android:textColor="#FFF"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Nombre del visitante -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_nombre_visitante"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ovalNombreVisitanteProto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombre_visitante_valor"
                android:textColor="#FFF"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Ingreso -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_ingreso"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ovalIngreso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/valor_ingreso"
                android:textColor="#FFF"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Salida -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_salida"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ovalSalidaProto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/valor_salida"
                android:textColor="#FFF"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Total Cobro -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_total_cobro"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ovalTotalCobroProto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/valor_total_cobro"
                android:textColor="#FFF"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <!-- Icono de Check -->
    <ImageView
        android:id="@+id/icono_check"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/check_circle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/desc_check" />


    <!-- Línea separadora inferior -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#B0B0B0" />

</LinearLayout>
