<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_fondo"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardFondo"
        android:layout_width="match_parent"
        android:layout_height="365dp"
        app:cardCornerRadius="87dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgFondo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/fondo_edificio"
            android:contentDescription="@string/desc_fondo_edificio" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/logoApp"
        android:layout_width="236.27dp"
        android:layout_height="241dp"
        android:scaleType="centerInside"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_app__"
        app:layout_constraintBottom_toBottomOf="@+id/cardFondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardFondo" />

    <LinearLayout
        android:id="@+id/layoutUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/logoApp"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iconoSesion"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/icono_sesion"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/desc_icono_sesion" />

        <TextView
            android:id="@+id/textoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saludo_usuario"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardBotonera"
        android:layout_width="322dp"
        android:layout_height="558dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="32dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardFondo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/btnPreRegistro"
                android:layout_width="259dp"
                android:layout_height="49dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:padding="8dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/pre_registro"
                    android:contentDescription="@string/desc_pre_registro" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/label_pre_registro"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnRegistroRapido"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:padding="8dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/qr"
                    android:contentDescription="@string/desc_registro_rapido" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/label_registro_rapido"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnPanelCobros"
                android:layout_width="209dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:padding="8dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/automovil"
                    android:contentDescription="@string/desc_panel_cobros" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/label_panel_cobros"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnHistorial"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:padding="8dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/historial_de_transacciones"
                    android:contentDescription="@string/desc_historial" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/label_historial"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnConfiguracion"
                android:layout_width="249dp"
                android:layout_height="41dp"
                android:orientation="horizontal"
                android:padding="8dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/configuracion_cuenta"
                    android:contentDescription="@string/desc_configuracion" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/label_configuracion"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
