<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <!-- Imagen de fondo en el encabezado -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_top"
        android:contentDescription="@string/desc_background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_log"
        app:layout_constraintBottom_toTopOf="@id/containerCard"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="184dp"
        android:layout_height="137dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/desc_logo_image"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Card blanca redondeada inferior -->
    <androidx.cardview.widget.CardView
        android:id="@+id/containerCard"
        android:layout_width="345dp"
        android:layout_height="464dp"
        android:layout_marginTop="-32dp"
        android:elevation="16dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="36dp"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <!-- Texto de Bienvenida -->
                <TextView
                    android:id="@+id/welcomeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/txt_bienvenido"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/txt_introduce_email"
                    android:textSize="14sp" />


                <!-- Input Email -->
                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="12dp" />


                <!-- Label Password -->
                <!-- Label contraseña -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/label_password"
                    android:textSize="14sp" />

                <!-- Input contraseña -->
                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:autofillHints="password"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/hint_password"
                    android:importantForAccessibility="yes"
                    android:inputType="textPassword"
                    android:paddingHorizontal="12dp" />

                <!-- ¿Olvidaste contraseña? -->
                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="@string/text_olvide_password"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <!-- Botón Login -->
                <Button
                    android:id="@+id/loginButton2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="#ED4525"
                    android:text="@string/btn_login"
                    android:textColor="#FFFFFF" />


                <!-- Términos y condiciones -->
                <TextView
                    android:id="@+id/terminos123"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terminos_condiciones"
                    android:textAlignment="center"
                    android:textColor="#828282"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />


            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
